- validate id_no not to za_id but to numeric to accomodate passport

--- a/fields.yml
+++ b/fields.yml
@@ -145,8 +145,10 @@ id:
 id_no:
   name: ID Number
   desc: Valid South African ID number
-  valid: 
-    - za_id
+  question: Please specify your South African ID number or Passport
+  valid:
+    - numeric
+    - at_least(10, characters)
 
 id_number:
   type: id_no
@@ -168,6 +170,7 @@ login:
   desc: Log in to the system
   access: public
   audit: $email
+  action: dialog
   url: /user/login
   src: /logout_icon.jpg 
 
