--- a/controls.yml
+++ b/controls.yml
@@ -440,7 +440,9 @@ wizard:
 wizard_jump:
   type: button
   action: trigger
-  event: wizard-jump($code)
+  event: 
+    name: wizard-jump
+    parameters: { index: $code }
   
 wizard_next:
   type: button
