--- a/preg_match_test.yml
+++ b/preg_match_test.yml
@@ -7,11 +7,17 @@ preg_match_test:
     - type: textarea
     - pattern
     - subject
+    - result: { type: input }
     - type: datatable
     - matches:
         selector: "#pattern,#subject"
         fields:
-          - match
+          - f1
+          - f2
+          - f3
+          - f4
+          - f5
+          - f6
         load:
           - call: page::preg_match_test()
   actions:
