don't show validate buttons

--- a/forgot_password.yml
+++ b/forgot_password.yml
@@ -22,7 +22,7 @@ begin:
         valid:
           - in(user.email_address)
   actions:
-    - validation:
+    - validate:
         post:
           - sql_values: >
               select lpad(floor(rand()*9999),4,'0') otp, first_name, last_name
@@ -51,7 +51,7 @@ check_otp:
   inputs:
     - otp
   actions:
-    - validation:
+    - validate:
         selector: "#otp,#email"
         post:
           - sql_values: >
