removed explicit db audit on login/logout

--- a/fields.yml
+++ b/fields.yml
@@ -180,6 +180,7 @@ login:
   desc: Log in to the system
   access: public
   action: dialog
+  audit: $email
   url: /user/login
   src: /logout_icon.jpg 
 
