--- a/controls.yml
+++ b/controls.yml
@@ -36,7 +36,7 @@ datatable:
   script: /common/datatable.js
   css: /datatable.css
   load:
-    - call: datatable::read($key)
+    - call: datatable::read(context,$key)
   position: top
   filter: all
   filter:
@@ -72,6 +72,7 @@ datatable:
     name: ">"
     desc: Hide options
   slideSpeed: 100
+  
 date:
   type: input
   create: datetimepicker
@@ -121,7 +122,7 @@ export:
   desc: Export to an Excel spreadsheet
   action: redirect
   validate: none
-  call: datatable::export($key)
+  call: datatable::export(context,$key)
   target: _blank
 
 file:
@@ -305,7 +306,7 @@ print:
   desc: Print above contents
   action: redirect
   validate: none
-  call: datatable::pdf($key)
+  call: datatable::pdf(context, $key)
   target: _blank
 
 question_input:
