--- a/fields.yml
+++ b/fields.yml
@@ -121,6 +121,7 @@ developed_by:
   
 email:
   desc: Valid e-mail address
+  name: Email Address
   valid: 
     - email
 
@@ -136,9 +137,7 @@ facebook:
   
 first_name:
   desc: Your first name as written in your ID book
-  valid:
-    - at_least(2)
-    - alphabetic
+  valid: name
 
 forgot_password:
   desc: Click here if you have forgotten your password and you need to reset it  
@@ -167,9 +166,7 @@ inputs:
   
 last_name:
   desc: Your last name as written in your ID book
-  valid:
-    - at_least(2)
-    - /[a-z '-]/i
+  valid: name
 
 latitude:
   desc: Distance north or south from the equator
