fixed contains_only regex to accept more than one character

--- a/validators.yml
+++ b/validators.yml
@@ -51,7 +51,7 @@ decimal:
   valid: must_be(^-?\d+\.\d+,decimal)
   
 digits: 
-  valid: contains_only(\d)
+  valid: contains_only(\d+)
 
 either:
   error: Invalid $name
